--- a/02_Demand_Estimation/output/chap3_ols_intro.tex
+++ b/02_Demand_Estimation/output/chap3_ols_intro.tex
@@ -1,30 +1,24 @@
 \begin{table}
 \centering
-\begin{tabular}{l|l}
+\begin{tabular}{l|c}
 \hline
-  & OLS\_NIPPYO\\
+ & OLS\_NIPPYO\\
 \hline
-定数項 & 3.4 (1.6)\\
+定数項 & 5.8 (1.1)\\
 \hline
-log(価格) & -2.6 (0.52)\\
+log(価格) & -1.2 (0.31)\\
 \hline
-馬力／重量 & 5.0 (5.1)\\
+馬力／重量 & -4.2 (4.0)\\
 \hline
-燃費(キロメートル／ 1 リットル) & 0.12 (0.04)\\
+燃費(キロメートル／ 1 リットル) & 0.09 (0.03)\\
 \hline
-サイズ & 0.52 (0.12)\\
+サイズ & 0.31 (0.06)\\
 \hline
-キャパシティダミー(5以上) & -0.23 (0.34)\\
+\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\\
 \hline
-レギュラータイプダミー & -0.56 (0.39)\\
+S.E. type & Heter.-rob.\\
 \hline
-外国車ダミー & 1.1 (0.32)\\
-\hline
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\\
-\hline
-S.E. type & Hetero.-rob.\\
-\hline
-R2 & 0.25\\
+R2 & 0.22\\
 \hline
 Observations & 196\\
 \hline
