--- a/02_Demand_Estimation/output/chap3_logit_iv.tex
+++ b/02_Demand_Estimation/output/chap3_logit_iv.tex
@@ -1,36 +1,28 @@
 \begin{table}
 \centering
-\begin{tabular}{l|l|c|c}
+\begin{tabular}{l|c|c|c}
 \hline
-  & OLS & iv\_BLP & iv\_GH\\
+ & OLS & iv\_BLP & iv\_GH\\
 \hline
-自動車価格 & -0.31 (0.03) & -0.73 (0.34) & -0.46 (0.12)\\
+定数項 & -12.3 (0.36) & -12.3 (0.38) & -13.0 (0.39)\\
 \hline
-馬力／重量 & 2.3 (1.3) & 11.8 (7.9) & 5.5 (3.0)\\
+自動車価格 & -0.26 (0.03) & -0.28 (0.07) & -0.55 (0.08)\\
 \hline
-燃費(キロメートル／ 1 リットル) & 0.18 (0.01) & 0.20 (0.02) & 0.19 (0.01)\\
+馬力／重量 & -0.65 (1.3) & 0.21 (2.3) & 8.4 (2.6)\\
 \hline
-サイズ & 0.28 (0.03) & 0.42 (0.11) & 0.33 (0.05)\\
+燃費(キロメートル／ 1 リットル) & 0.13 (0.010) & 0.13 (0.010) & 0.13 (0.010)\\
 \hline
-キャパシティダミー(5以上) & -0.13 (0.12) & -0.39 (0.23) & -0.22 (0.13)\\
-\hline
-レギュラータイプダミー & -0.20 (0.13) & -0.81 (0.51) & -0.41 (0.22)\\
-\hline
-外国車ダミー & 0.45 (0.12) & 0.64 (0.22) & 0.51 (0.13)\\
-\hline
-Fixed-Effects: & ------------ & ------------ & ------------\\
-\hline
-year & Yes & Yes & Yes\\
+サイズ & 0.18 (0.02) & 0.19 (0.02) & 0.24 (0.02)\\
 \hline
 \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\\
 \hline
 S.E. type & Hetero.-rob. & Hetero.-rob. & Hetero.-rob.\\
 \hline
-R2 & 0.28 & 0.22 & 0.27\\
+R2 & 0.22 & 0.22 & 0.18\\
 \hline
 Observations & 1,823 & 1,823 & 1,823\\
 \hline
-F-test (1st stage), 自動車価格 & -- & 2.7 & 25.1\\
+F-test (1st stage), 自動車価格 & -- & 45.8 & 53.0\\
 \hline
 \end{tabular}
 \end{table}
