--- a/02_Demand_Estimation/output/chap3_logit_iv_1st.tex
+++ b/02_Demand_Estimation/output/chap3_logit_iv_1st.tex
@@ -1,50 +1,46 @@
 \begin{table}
 \centering
-\begin{tabular}{l|l|c}
+\begin{tabular}{l|c|c}
 \hline
-  & iv1st\_BLP & iv1st\_GH\\
+ & iv1st\_BLP & iv1st\_GH\\
 \hline
-馬力／重量 & 22.7 (1.4) & 17.0 (1.5)\\
+定数項 & -3.2 (1.7) & -1.3 (0.42)\\
 \hline
-燃費(キロメートル／ 1 リットル) & 0.04 (0.006) & -0.007 (0.01)\\
+馬力／重量 & 28.7 (0.99) & 23.5 (1.5)\\
 \hline
-サイズ & 0.32 (0.02) & 0.27 (0.03)\\
+燃費(キロメートル／ 1 リットル) & -0.01 (0.008) & -0.07 (0.01)\\
 \hline
-キャパシティダミー(5以上) & -0.56 (0.07) & -0.16 (0.13)\\
+サイズ & 0.20 (0.01) & 0.19 (0.02)\\
 \hline
-レギュラータイプダミー & -1.4 (0.18) & -1.3 (0.15)\\
+iv\_BLP\_own\_hppw & -0.73 (0.34) & \\
 \hline
-外国車ダミー & 0.41 (0.20) & 0.44 (0.18)\\
+iv\_BLP\_own\_FuelEfficiency & -0.007 (0.0007) & \\
 \hline
-iv\_BLP\_own\_hppw & 0.47 (0.23) & \\
+iv\_BLP\_own\_size & 0.01 (0.004) & \\
 \hline
-iv\_BLP\_own\_FuelEfficiency & -0.001 (0.0008) & \\
+iv\_BLP\_other\_hppw & 0.17 (0.26) & \\
 \hline
-iv\_BLP\_own\_size & -0.003 (0.002) & \\
+iv\_BLP\_other\_FuelEfficiency & 0.001 (0.0004) & \\
 \hline
-iv\_BLP\_other\_size & 0.0002 (0.0005) & \\
+iv\_BLP\_other\_size & -0.002 (0.003) & \\
 \hline
-iv\_GH\_own\_hppw &  & -1.5 (0.42)\\
+iv\_GH\_own\_hppw &  & -1.9 (0.44)\\
 \hline
-iv\_GH\_own\_FuelEfficiency &  & 8.5e-5 (3.3e-5)\\
+iv\_GH\_own\_FuelEfficiency &  & 5.3e-5 (3.2e-5)\\
 \hline
-iv\_GH\_own\_size &  & -0.0009 (0.0002)\\
+iv\_GH\_own\_size &  & -0.001 (0.0002)\\
 \hline
-iv\_GH\_other\_hppw &  & 0.54 (0.10)\\
+iv\_GH\_other\_hppw &  & 0.42 (0.10)\\
 \hline
-iv\_GH\_other\_FuelEfficiency &  & 1.8e-5 (8.7e-6)\\
+iv\_GH\_other\_FuelEfficiency &  & 4.9e-5 (8.7e-6)\\
 \hline
-iv\_GH\_other\_size &  & 0.0001 (4.5e-5)\\
+iv\_GH\_other\_size &  & 0.0001 (3.9e-5)\\
 \hline
-Fixed-Effects: & --------------- & ----------------\\
+\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\\
 \hline
-year & Yes & Yes\\
+S.E. type & Heteroske.-rob. & Heteroske.-rob.\\
 \hline
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\\
-\hline
-S.E. type & Heteroske.-rob. & Heterosked.-rob.\\
-\hline
-R2 & 0.69 & 0.71\\
+R2 & 0.62 & 0.62\\
 \hline
 Observations & 1,823 & 1,823\\
 \hline
