--- a/02_Demand_Estimation/output/chap4_blp.tex
+++ b/02_Demand_Estimation/output/chap4_blp.tex
@@ -6,43 +6,21 @@
 \hline
   & coeff & se\\
 \hline
-cons & -13.74 & 0.63\\
+cons & -32.98 & 16.32\\
 \hline
-price & -2.25 & 0.74\\
+price & -0.88 & 0.34\\
 \hline
-FuelEfficiency & 0.19 & 0.01\\
+FuelEfficiency & 0.11 & 0.01\\
 \hline
-hppw & 13.35 & 3.15\\
+hppw & 7.92 & 3.54\\
 \hline
-size & 0.53 & 0.07\\
+size & 0.24 & 0.14\\
 \hline
-capacity\_d & -0.30 & 0.14\\
+random\_price & 0.30 & 0.19\\
 \hline
-FuelRegular\_d & -1.03 & 0.25\\
+random\_constant & 18.00 & 16.02\\
 \hline
-Foreign\_d & 0.98 & 0.17\\
-\hline
-year\_2007 & -0.10 & 0.15\\
-\hline
-year\_2008 & -0.25 & 0.15\\
-\hline
-year\_2009 & -0.48 & 0.15\\
-\hline
-year\_2010 & -0.62 & 0.16\\
-\hline
-year\_2011 & -0.83 & 0.17\\
-\hline
-year\_2012 & -0.70 & 0.17\\
-\hline
-year\_2013 & -0.85 & 0.17\\
-\hline
-year\_2014 & -1.04 & 0.18\\
-\hline
-year\_2015 & -1.14 & 0.18\\
-\hline
-year\_2016 & -1.25 & 0.18\\
-\hline
-random\_price & 0.70 & 0.24\\
+random\_size & 0.01 & 0.84\\
 \hline
 \end{tabular}
 \end{table}
