--- a/02_Demand_Estimation/output/chap4_nest_iv.tex
+++ b/02_Demand_Estimation/output/chap4_nest_iv.tex
@@ -1,38 +1,32 @@
 \begin{table}
 \centering
-\begin{tabular}{l|l|c}
+\begin{tabular}{l|c|c}
 \hline
-  & OLS & IV\_GH\\
+ & OLS & IV\_BLP\\
 \hline
-自動車価格 & -0.12 (0.02) & -0.33 (0.06)\\
+定数項 & -7.6 (0.19) & -9.5 (0.24)\\
 \hline
-log\_inside\_share & 0.85 (0.009) & 0.64 (0.03)\\
+自動車価格 & -0.31 (0.02) & -0.65 (0.05)\\
 \hline
-馬力／重量 & 12.9 (0.82) & 13.2 (1.6)\\
+log\_inside\_share & 0.78 (0.01) & 0.60 (0.04)\\
 \hline
-燃費 (キロメートル／ 1 リットル) & 0.03 (0.004) & 0.07 (0.008)\\
+馬力／重量 & 10.6 (0.85) & 18.9 (2.0)\\
 \hline
-サイズ & 0.09 (0.01) & 0.18 (0.03)\\
+燃費 (キロメートル／ 1 リットル) & 0.06 (0.004) & 0.07 (0.006)\\
 \hline
-キャパシティダミー(5以上) & -0.0006 (0.04) & -0.11 (0.06)\\
+サイズ & 0.16 (0.007) & 0.23 (0.01)\\
 \hline
-レギュラータイプダミー & 1.3 (0.07) & 0.56 (0.13)\\
+\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\\
 \hline
-Fixed-Effects: & -------------- & ------------\\
+S.E. type & Hetero.-rob. & Hetero.-rob.\\
 \hline
-year & Yes & Yes\\
-\hline
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\_\_ & \_\_\_\_\_\_\_\_\_\_\_\_\\
-\hline
-S.E. type & Heterosk.-rob. & Hetero.-rob.\\
-\hline
-R2 & 0.91 & 0.87\\
+R2 & 0.86 & 0.76\\
 \hline
 Observations & 1,823 & 1,823\\
 \hline
-F-test (1st stage), 自動車価格 & -- & 20.2\\
+F-test (1st stage), 自動車価格 & -- & 86.9\\
 \hline
-F-test (1st stage), log\_inside\_share & -- & 52.0\\
+F-test (1st stage), log\_inside\_share & -- & 100.9\\
 \hline
 \end{tabular}
 \end{table}
