--- a/02_Demand_Estimation/output/chap4_nest_own_elas.tex
+++ b/02_Demand_Estimation/output/chap4_nest_own_elas.tex
@@ -4,9 +4,9 @@
 \hline
   & Mean & Std.Dev & Median & Min & Max\\
 \hline
-own\_elas\_ols & -1.91 & 1.39 & -1.54 & -9.65 & -0.52\\
+own\_elas\_ols & -3.52 & 2.56 & -2.84 & -17.79 & -0.96\\
 \hline
-own\_elas\_ivgh & -2.28 & 1.66 & -1.84 & -11.52 & -0.63\\
+own\_elas\_ivblp & -4.05 & 2.94 & -3.27 & -20.40 & -1.11\\
 \hline
 \end{tabular}
 \end{table}
